# ClinicFlowAI

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: identity.json  (+2 more)
agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
agent/app/: config.py  deps.py  main.py
agent/app/agents/: base.py  evaluator_agent.py  pre_visit_agent.py  report_agent.py
agent/app/graph/: driver.py  schema.py
agent/app/graphs/: post_visit.py  pre_visit.py  soap.py
agent/app/llm/: client.py  openai_client.py  streaming.py  structured.py
agent/app/persistence/: agent_turns.py  evaluator_findings.py  postgres.py
agent/app/prompts/: base.py  pre_visit.py  report.py
agent/app/routes/: evaluator.py  patient_context.py  post_visit.py  pre_visit.py  report.py  rules.py  stt.py  visit.py
agent/app/schemas/: clarification.py  evaluator.py  pre_visit.py  report.py
agent/app/tools/: clinical_tools.py  graph_tools.py  hermes_tools.py  meta_tools.py  registry.py  report_tools.py  spec.py
agent/scripts/: seed_demo_graph.py
agent/tests/: conftest.py  test_post_visit_graph.py  test_post_visit_route.py  test_pre_visit_graph.py  test_pre_visit_route.py  test_soap_graph.py  test_visit_route.py
agent/tests/agents/: test_pre_visit_agent.py  test_report_agent.py
agent/tests/e2e/: test_agent_flows.py
agent/tests/integration/: test_evaluator_e2e.py
agent/tests/routes/: conftest.py  test_patient_context_routes.py  test_report_chat_endpoint.py  test_report_edit_current_draft.py  test_report_finalize_does_not_write_visits.py  test_stt.py
(+630 files in other folders)
