[project]
name = "cliniflow-agent"
version = "0.0.1"
description = "CliniFlow AI agent service (FastAPI + LangGraph + Neo4j)."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "httpx==0.27.2",
    "tenacity==8.5.0",
    "python-multipart==0.0.12",
    "langgraph==0.2.34",
    "langchain-core==0.3.9",
    "langchain-openai==0.2.2",
    "neo4j==5.24.0",
    "prometheus-client==0.21.0",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
